tests/neg-custom-args/captures/spread-problem.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/spread-problem.scala:8:6 ---------------------------------
8 |  race(Seq(src1, src2)*) // error
  |  ^^^^^^^^^^^^^^^^^^^^^^
  |  Found:    Source[T^?]^{src1, src2}
  |  Required: Source[T]
  |  Note that capability (src1 : Source[T]^) is not included in capture set {}.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/spread-problem.scala:11:6 --------------------------------
11 |  race(src1, src2) // error
   |  ^^^^^^^^^^^^^^^^
   |  Found:    Source[T^?]^{src1, src2}
   |  Required: Source[T]
   |  Note that capability (src1 : Source[T]^) is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
